fix: AA contrast

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -12,7 +12,7 @@
 	--primary-color-nav: #1abc9c;
 	--primary-color-darker: #14937a;
 	--secondary-color-lighter: hsl(0, 0%, 70%);
-	--secondary-color: hsl(0, 0%, 60%);
+	--secondary-color: hsl(0, 0%, 56%);
 	--secondary-color-darker: hsl(0, 0%, 50%);
 	--secondary-button-color: hsl(0, 0%, 60%);
 	--secondary-button-color-lighter: hsl(0, 0%, 50%);
